{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 230,
  "lineage": "92ad4a06-e3d6-0130-bdb8-acff3461d229",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:685053870964:loadbalancer/app/openpdfai-alb-production/69a017f275f03d39",
            "arn_suffix": "app/openpdfai-alb-production/69a017f275f03d39",
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "openpdfai-alb-production-177321001.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:685053870964:loadbalancer/app/openpdfai-alb-production/69a017f275f03d39",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "openpdfai-alb-production",
            "preserve_host_header": false,
            "security_groups": [
              "sg-019c795a70f3ef492"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01c7f7ecee20ff84c"
              },
              {
                "subnet_id": "subnet-0b95d0a4f94246514"
              }
            ],
            "subnets": [
              "subnet-01c7f7ecee20ff84c",
              "subnet-0b95d0a4f94246514"
            ],
            "vpc_id": "vpc-0e301d98cf9f55f15",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "alb_default_listener_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:685053870964:listener/app/openpdfai-alb-production/69a017f275f03d39/87d4abdd957183f0",
            "certificate_arn": "arn:aws:acm:us-east-1:685053870964:certificate/0f153e8e-204f-4704-8054-ea9da6c593cf",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:685053870964:targetgroup/openpdfai-targetgroup-production/9bac43bbc848e01d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:685053870964:listener/app/openpdfai-alb-production/69a017f275f03d39/87d4abdd957183f0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:685053870964:loadbalancer/app/openpdfai-alb-production/69a017f275f03d39",
            "mutual_authentication": [
              {
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-Ext-2018-06",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.alb_certificate",
            "aws_acm_certificate_validation.alb_certificate",
            "aws_alb.alb",
            "aws_alb_target_group.service_target_group",
            "aws_route53_record.generic_certificate_validation",
            "aws_route53_zone.service",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "service_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:685053870964:targetgroup/openpdfai-targetgroup-production/9bac43bbc848e01d",
            "arn_suffix": "targetgroup/openpdfai-targetgroup-production/9bac43bbc848e01d",
            "deregistration_delay": "5",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 60,
                "matcher": "200",
                "path": "/api/v1/users/sanity",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 30,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:685053870964:targetgroup/openpdfai-targetgroup-production/9bac43bbc848e01d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "openpdfai-targetgroup-production",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "dependencies": [
            "aws_alb.alb",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:internet-gateway/igw-00c6be6da36ddeab2",
            "id": "igw-00c6be6da36ddeab2",
            "owner_id": "685053870964",
            "tags": {
              "Name": "openpdfai_internet_way_production"
            },
            "tags_all": {
              "Name": "openpdfai_internet_way_production"
            },
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "public_main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0defc08dcc6a02ede",
            "original_route_table_id": "rtb-0b12c0699a5784317",
            "route_table_id": "rtb-0649dc02ec102aefc",
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:route-table/rtb-0649dc02ec102aefc",
            "id": "rtb-0649dc02ec102aefc",
            "owner_id": "685053870964",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00c6be6da36ddeab2",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "openpdfai_public_route_table_production"
            },
            "tags_all": {
              "Name": "openpdfai_public_route_table_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-018b61b9acada9795",
            "route_table_id": "rtb-0649dc02ec102aefc",
            "subnet_id": "subnet-01c7f7ecee20ff84c"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bce369229fb31cc0",
            "route_table_id": "rtb-0649dc02ec102aefc",
            "subnet_id": "subnet-0b95d0a4f94246514"
          },
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:security-group/sg-019c795a70f3ef492",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019c795a70f3ef492",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow incoming https trafic",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "openpdfai_alb_security_group_production",
            "name_prefix": "",
            "owner_id": "685053870964",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "openpdfai_alb_security_group_production"
            },
            "tags_all": {
              "Name": "openpdfai_alb_security_group_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "batch",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:security-group/sg-0fbd7898fb99912eb",
            "description": "Security Groupe for Batch",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbd7898fb99912eb",
            "ingress": [],
            "name": "openpdfai_batch_production",
            "name_prefix": "",
            "owner_id": "685053870964",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "openpdfai_batch_production"
            },
            "tags_all": {
              "Name": "openpdfai_batch_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_container_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:security-group/sg-012e27f9c3b5dee8e",
            "description": "Security group for ECS task running on Fargate",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-012e27f9c3b5dee8e",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow ingress traffic from ALB on HTTP only",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-019c795a70f3ef492"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "openpdfai_ecs_task_security_group_production",
            "name_prefix": "",
            "owner_id": "685053870964",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "openpdfai_ecs_task_security_group_production"
            },
            "tags_all": {
              "Name": "openpdfai_ecs_task_security_group_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_postgres",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:security-group/sg-052369b5cf7bd51f8",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-052369b5cf7bd51f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "terraform-20240103093112957500000001",
            "name_prefix": "terraform-",
            "owner_id": "685053870964",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "openpdfai_rds_postgres_security_group_production"
            },
            "tags_all": {
              "Name": "openpdfai_rds_postgres_security_group_production"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:subnet/subnet-04f7281fe63b7e17f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f7281fe63b7e17f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "685053870964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "openpdfai_private_subnet_0_production"
            },
            "tags_all": {
              "Name": "openpdfai_private_subnet_0_production"
            },
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:subnet/subnet-027b277cc55eff5a1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-027b277cc55eff5a1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "685053870964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "openpdfai_private_subnet_1_production"
            },
            "tags_all": {
              "Name": "openpdfai_private_subnet_1_production"
            },
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:subnet/subnet-01c7f7ecee20ff84c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01c7f7ecee20ff84c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "685053870964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "openpdfai_public_subnet_0_production"
            },
            "tags_all": {
              "Name": "openpdfai_public_subnet_0_production"
            },
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:subnet/subnet-0b95d0a4f94246514",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b95d0a4f94246514",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "685053870964",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "openpdfai_public_subnet_1_production"
            },
            "tags_all": {
              "Name": "openpdfai_public_subnet_1_production"
            },
            "vpc_id": "vpc-0e301d98cf9f55f15"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:685053870964:vpc/vpc-0e301d98cf9f55f15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0faf723f7946bef59",
            "default_route_table_id": "rtb-0649dc02ec102aefc",
            "default_security_group_id": "sg-04871833b8b99b0ee",
            "dhcp_options_id": "dopt-00659f0b18da46697",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e301d98cf9f55f15",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0649dc02ec102aefc",
            "owner_id": "685053870964",
            "tags": {
              "Name": "openpdfai_vpc_production"
            },
            "tags_all": {
              "Name": "openpdfai_vpc_production"
            }
          }
        }
      ]
    }
  ]
}